methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:30: error: too many arguments for method retourne: ()Unit
    retourne(20);
            ^